# MPI-Project

./: .gitignore  QUICK_START.md  README.md  main.py  outline.md  pyproject.toml  supabase_sessions_setup.sql  supabase_setup.sql
backend/: main.py  requirements.txt
backend/docs/: test_content.txt
backend/routers/: sessions.py  study.py
backend/services/: ingestion.py  rag.py
backend/tests/: debug_db.py  test_db_connection.py  test_routes.py  test_upload.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/[name]/[id]/: page.tsx
frontend/components/: ChatInterface.tsx  FlashcardView.tsx  SessionList.tsx  StudySession.tsx  UploadModal.tsx  UploadZone.tsx
frontend/lib/: utils.ts
